fixed login and save data